# Mailspring-Sync

./: .appveyor.yml  .gitignore  .travis.yml  BUILDING.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  FASTMAIL_ISSUE_ANALYSIS.md  FORK_INVESTIGATION.md  README.md  VCPKG_MIGRATION_PLAN.md  before-open-sourcing.txt  build.cmd  build.sh  dbdiagram.io  mailspring-sync  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-windows.yml  build.yml  test-linux-distros.yml  test.yml
MailSync/: CalendarWorker.cpp  CalendarWorker.hpp  CommStream.cpp  CommStream.hpp  DAVUtils.cpp  DAVUtils.hpp  DAVWorker.cpp  DAVWorker.hpp  DavXML.cpp  DavXML.hpp  DeltaStream.cpp  DeltaStream.hpp  GenericException.cpp  GenericException.hpp  GoogleContactsWorker.cpp  GoogleContactsWorker.hpp  GraphMailSender.cpp  GraphMailSender.hpp  MailProcessor.cpp  MailProcessor.hpp  MailStore.cpp  MailStore.hpp  MailStoreTransaction.cpp  MailStoreTransaction.hpp  MailSync.xcodeproj  MailUtils.cpp  MailUtils.hpp  MailspringDynamicTidy.cpp  MailspringDynamicTidy.h  MetadataExpirationWorker.cpp  MetadataExpirationWorker.hpp  MetadataWorker.cpp  MetadataWorker.hpp  NetworkRequestUtils.cpp  NetworkRequestUtils.hpp  ProgressCollectors.cpp  ProgressCollectors.hpp  Query.cpp  Query.hpp  SPDLogExtensions.hpp  (+16 more)
MailSync.xcodeproj/: project.pbxproj
MailSync.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MailSync.xcodeproj/xcshareddata/xcschemes/: mailsync.xcscheme
MailSync.xcodeproj/xcuserdata/bengotow.xcuserdatad/xcschemes/: MailSync.xcscheme  xcschememanagement.plist
MailSync/API/: ChatMessageAPI.cpp  ChatMessageAPI.h
MailSync/Models/: AIProvider.h  Account.cpp  Account.hpp  Calendar.cpp  Calendar.hpp  ChatMessage.cpp  ChatMessage.h  ChatMessagePriority.h  ChatMessageReaction.cpp  ChatMessageReaction.h  ChatMessageStatus.h  ChatMessageTag.h  ChatMessageType.h  Contact.cpp  Contact.hpp  ContactBook.cpp  ContactBook.hpp  ContactGroup.cpp  ContactGroup.hpp  ContactRelation.cpp  ContactRelation.hpp  Event.cpp  Event.hpp  File.cpp  File.hpp  Folder.cpp  Folder.hpp  Identity.cpp  Identity.hpp  Label.cpp  Label.hpp  MailModel.cpp  MailModel.hpp  Message.cpp  Message.hpp  MessageChatMessage.cpp  MessageChatMessage.h  ReactionType.h  Summary.cpp  Summary.hpp  (+6 more)
MailSync/Utils/: ChatMessageError.h  JsonUtils.h
MailSync/include/mailsync/: constants.hpp  dav_utils.hpp  dav_worker.hpp  dav_xml.hpp  delta_stream.hpp  generic_exception.hpp  google_contacts_worker.hpp  mail_processor.hpp  mail_store.hpp  mail_store_transaction.hpp  mail_utils.hpp  metadata_expiration_worker.hpp  metadata_worker.hpp  network_request_utils.hpp  progress_collectors.hpp  query.hpp  spd_log_extensions.hpp  sync_exception.hpp  sync_worker.hpp  task_processor.hpp  thread_utils.hpp  vcard.hpp  xoauth2_token_manager.hpp
MailSync/include/mailsync/models/: account.hpp  calendar.hpp  contact.hpp  contact_book.hpp  contact_group.hpp  event.hpp  file.hpp  folder.hpp  identity.hpp  label.hpp  mail_model.hpp  message.hpp  task.hpp  thread.hpp
MailSync/src/: dav_utils.cpp  dav_worker.cpp  dav_xml.cpp  delta_stream.cpp  generic_exception.cpp  google_contacts_worker.cpp  mail_processor.cpp  mail_store.cpp  mail_store_transaction.cpp  mail_utils.cpp  metadata_expiration_worker.cpp  metadata_worker.cpp  network_request_utils.cpp  progress_collectors.cpp  query.cpp  sync_exception.cpp  sync_worker.cpp  task_processor.cpp  thread_utils.cpp  vcard.cpp  xoauth2_token_manager.cpp
MailSync/src/models/: account.cpp  calendar.cpp  contact.cpp  contact_book.cpp  contact_group.cpp  event.cpp  file.cpp  folder.cpp  identity.cpp  label.cpp  mail_model.cpp  message.cpp  task.cpp  thread.cpp
Windows/: dbg.h  mailsync.sln  mailsync.vcxproj  mailsync.vcxproj.filters  stdafx.cpp
docs/: CODE_REVIEW_DELTASTREAM.md  CODE_REVIEW_EMAIL_SYNC.md  CODE_REVIEW_MAILPROCESSOR.md  CODE_REVIEW_MAILSTORE.md  CODE_REVIEW_TASKPROCESSOR.md  EML_EXPORT_IMPLEMENTATION.md  vendor-update-workflow.md
tests/: MockIMAPSession.hpp  Smoke_test.cpp  TaskProcessor_test.cpp
vcpkg-overlay-ports/cyrus-sasl/: configure.diff  portfile.cmake  vcpkg.json
